# localshare

./: .gitignore  LICENSE  README.md  disapi.ts  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.js
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/src/: assets.rs  chat_commands.rs  commands.rs  common.rs  lib.rs  localsend.rs  login.rs  main.rs  reverse_proxy.rs  socks2http.rs
src-tauri/src/dufs/: args.rs  auth.rs  http_logger.rs  mod.rs  server.rs
src-tauri/src/tuicc/: config.rs  mod.rs  utils.rs
src-tauri/src/tuicc/connection/: handle_stream.rs  handle_task.rs  mod.rs
src-tauri/src/tuicc/socks5/: handle_task.rs  mod.rs  udp_session.rs
src/components/: UrlInfo.svelte
src/lib/: auth.ts  index.ts
src/lib/db/: database.ts  json2db.ts  relations.ts  schema.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/chat/: +page.svelte
src/routes/dufs/: +page.svelte
src/routes/localsend/: +page.svelte
src/routes/topic/: +page.svelte
src/routes/topics/: +page.svelte
