[package]
name = "localshare"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "localshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "config-json5", "rustls-tls", "webview-data-url"] }
tauri-plugin-view = "0.0.5"
network-interface = { version = "*", features = ["serde"] }
sysinfo = { version = "*", features = ["serde"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
futures = "0.3.31"
tokio = "1.44"
tauri-plugin-dialog = "2"
#tauri-plugin-android-fs = { version = "9.1.0", features = ["avoid-issue1"] }
tauri-plugin-android-fs = { path = "../../tauri-plugin-android-fs", features = ["avoid-issue1"] }

actix-files = "0.6.6"
actix-web = { version = "4", features = ["macros", "compress-brotli", "compress-gzip", "compress-zstd"], default-features = false }
actix-web-httpauth = "0.8"
