[package]
name = "localshare"
version = "0.5.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "localshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "config-json5", "rustls-tls", "webview-data-url"] }
tauri-plugin-view = "0.0.5"
network-interface = { version = "2.0.1", features = ["serde"] }
sysinfo = { version = "0.35.1", features = ["serde"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
futures = "0.3.31"
tauri-plugin-dialog = "2"
#tauri-plugin-android-fs = { version = "9.1.0", features = ["avoid-issue1"] }
tauri-plugin-android-fs = { path = "../../tauri-plugin-android-fs", features = ["avoid-issue1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version="0.8.4", features = ["query", "macros"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.4", features = ["fs", "trace"] }

#tokio = {version = "1.44.2", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
tokio = {version = "1.45.0", features = ["full"] }
clap = { version = "4.5", features = ["wrap_help", "env"] }
clap_complete = "4.5"
chrono = { version = "0.4",  features = ["clock"] }
tokio-util = { version = "0.7",  features = ["io-util", "compat"] }
hyper = { version = "1", features = ["http1", "server"] }
percent-encoding = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
async_zip = { version = "0.0.17", default-features = false, features = ["deflate", "bzip2", "xz", "chrono", "tokio"] }
headers = "0.4"
mime_guess = "2.0"
if-addrs = "0.13"
rustls-pemfile = { version = "2.2", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring", "tls12"] }
md5 = "0.7"
lazy_static = "1.5"
uuid = { version = "1.16", features = ["v4", "fast-rng"] }
urlencoding = "2.1"
xml-rs = "0.8"
log = { version = "0.4", features = ["std"] }
socket2 = {version =  "0.5.9", features = ["all"] }

async-stream = "0.3"
walkdir = "2.5"
form_urlencoded = "1.2"
alphanumeric-sort = "1.5"
content_inspector = "0.2"
anyhow = "1.0"
chardetng = "0.1"
glob = "0.3"
indexmap = "2.9"
serde_yaml = "0.9"
sha-crypt = "0.5"
base64 = "0.22"
smart-default = "0.7"
rustls-pki-types = "1.12"
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "server-graceful"] }
http-body-util = "0.1"
bytes = "1.10"
pin-project-lite = "0.2"
sha2 = "0.10.9"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-sharetarget = { path = "../../tauri-plugin-sharetarget" }

rand = "0.9.1"
hex = "0.4.3"
reqwest= { version = "0.12.15", default-features = false,features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
rcgen = "0.13.2"
tauri-plugin-log = "2"
thiserror = "2.0.12"
#tauri-plugin-sql = "2.2"
tauri-plugin-sql = { path = "../../plugins-workspace/plugins/sql", features = ["sqlite"] }
tauri-plugin-os = "2"
url = "2.5.4"

# Feature "bundled-sqlcipher" of libsqlite3 make android build fail
#libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher"] }
#libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"] }

[features]
default = []
tls = ["rustls-pemfile", "tokio-rustls"]
